# VolcEngineRTC

./: .gitignore  README.md
Windows/: .gitattributes  API_Example.pro  API_Example_resource.rc  CMakeLists.txt  README.md  resources.qrc
Windows/3rd/mac/FaceUnity/: version.h
Windows/Advanced_Demo/: CMakeLists.txt  README.md  app.qrc
Windows/Advanced_Demo/VolcEngineRTC/include/: bytertc_room.h  bytertc_room_event_handler.h  bytertc_video.h  bytertc_video_event_handler.h
Windows/Advanced_Demo/sources/: BeautySettingWidget.cpp  BeautySettingWidget.h  Constants.cpp  Constants.h  LoginWidget.cpp  LoginWidget.h  OperateWidget.cpp  OperateWidget.h  RoomMainWidget.cpp  RoomMainWidget.h  VideoWidget.cpp  VideoWidget.h  main.cpp
Windows/Advanced_Demo/sources/http/: http.cpp  localcache.cpp  networkhttpreply.cpp  networkhttpreply.h
Windows/Advanced_Demo/sources/screen_share/: flowlayout.cpp  model.h  setting.cpp  setting.h  share_screen_widget.cpp  share_screen_widget.h  share_view_container.cpp  share_view_container.h  share_view_wnd.cpp  share_view_wnd.h  side_list_widget_wrap.h  slider_wrap.cpp  slider_wrap.h  utils.cpp  utils.h
Windows/Advanced_Demo/ui/: BeautySettingWidget.ui  LoginWidget.ui  OperateWidget.ui  RoomMainWidget.ui  VideoWidget.ui  setting.ui  share_screen_widget.ui
Windows/QuickStart_Demo/: CMakeLists.txt  QuickStart.qrc  README.md
Windows/QuickStart_Demo/VolcEngineRTC/include/: bytertc_room.h  bytertc_room_event_handler.h  bytertc_video.h  bytertc_video_event_handler.h
Windows/QuickStart_Demo/sources/: Constants.h  LoginWidget.cpp  LoginWidget.h  RoomMainWidget.cpp  RoomMainWidget.h  VideoWidget.cpp  main.cpp
Windows/QuickStart_Demo/ui/: OperateWidget.ui  RoomMainWidget.ui  VideoWidget.ui
Windows/Resources/audio/: 16k-mono-speech_fft_32s.pcm
Windows/VolcEngineRTC/include/game/: game_rtc_defines.h  game_rtc_engine_proxy.h
Windows/VolcEngineRTC/include/rtc/: bytertc_advance.h  bytertc_audio_frame.h  bytertc_audio_mixing_manager.h  bytertc_defines.h  bytertc_device_manager.h  bytertc_engine_interface.h  bytertc_engine_lite_event_handler.h  bytertc_engine_lite_interface.h  bytertc_internal.h  bytertc_room_event_handler_interface.h  bytertc_room_interface.h  bytertc_video_effect_interface.h  bytertc_video_frame.h
Windows/VolcEngineRTC/include/rts/: byte_rts_play_engine_interface.h
Windows/VolcEngineRTC/lib/Win32/: VolcEngineRTC.lib
Windows/VolcEngineRTC/lib/x64/: VolcEngineRTC.lib
Windows/sources/: Constants.h  OperateWidget.cpp  OperateWidget.h  RoomMainWidget.cpp  RoomMainWidget.h
Windows/src/: Info.plist  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Windows/src/Advanced/AudioMixing/: AudioMixItem.cpp  AudioMixItem.h  AudioMixItem.ui  AudioMixingEffect.cpp  AudioMixingEffect.h  AudioMixingEffect.ui  AudioMixingMedia.cpp  AudioMixingMedia.h  AudioMixingMedia.ui  RawAudioData.cpp  RawAudioData.h  RawAudioData.ui
Windows/src/Advanced/ByteBeauty/: ByteBeautyWidget.cpp  ByteBeautyWidget.h  ByteBeautyWidget.ui
Windows/src/Advanced/CDNStream/: CDNStreamByServer.cpp  CDNStreamByServer.h  CDNStreamByServer.ui
Windows/src/Advanced/CrossRoomPK/: CrossRoomPK.cpp  CrossRoomPK.h  CrossRoomPK.ui
Windows/src/Advanced/FuBeauty/: FConfig.h  FaceUnityWidget.cpp  FaceUnityWidget.h  FaceUnityWidget.ui  Language.h  Nama.cpp  Nama.h  PixTextWidget.cpp  PixTextWidget.h  PixTextWidget.ui  authpack.h
Windows/src/Advanced/Message/: AudioMessage.cpp  AudioMessage.h  AudioMessage.ui  SEIMessage.cpp  SEIMessage.h  SEIMessage.ui
Windows/src/Advanced/MultiRoom/: MultiRoom.cpp  MultiRoom.h  MultiRoom.ui
Windows/src/Advanced/RawAudioData/: RawAudioData.cpp  RawAudioData.h  RawAudioData.ui
Windows/src/Advanced/SoundEffects/: SoundEffectsWidget.cpp  SoundEffectsWidget.h  SoundEffectsWidget.ui
Windows/src/Advanced/VideoConfig/: VideoConfigWidget.cpp  VideoConfigWidget.h  VideoConfigWidget.ui
Windows/src/Basic/: QuickStartWidget.cpp  QuickStartWidget.h  QuickStartWidget.ui
Windows/src/Public/: BaseItem.h  BaseWidget.cpp  BaseWidget.h  ByteRTCEventHandler.cpp  ByteRTCEventHandler.h  Config.h  ListWidget.cpp  ListWidget.h  LogWidget.cpp  LogWidget.h  LogWidget.ui  Resources.h  UserWidget.cpp  UserWidget.h  UserWidget.ui  Utils.cpp  Utils.h
Windows/src/Public/http/: http.cpp  http.h
Windows/src/Public/token/: AccessToken.h
Windows/ui/: LoginWidget.ui
Windows/veRTCScenesDemo/: .gitattributes  .gitignore  ByteRTCStart.sln
Windows/veRTCScenesDemo/ByteRTCStart/: BDAVInfoWnd.h  BDBubbleTipWnd.h  BDControlWnd.h  BDFeedbackWnd.h  BDLeaveWnd.h  BDLoginWnd.h  BDMainContainerFrame.h  BDMaskWnd.h  BDMeetingLoginWnd.h  BDMessageWnd.h  BDRateWnd.h  BDSettingWnd.h  BDSnapshotFocusWnd.h  BDSnapshotVScrollWnd.h  BDSnapshotWnd.h  BDTipsWnd.h  BDTopBarWnd.h  BDUserFocusWnd.h  BDUserLoginWnd.h  BDUserTitleWnd.h  BDUserVideoViewWnd.h  BDUserWnd.h  BDUsersVScrollWnd.h  BDWarningWnd.h  ByteAppConfig.cpp  ByteAppConfig.h  ByteMessage.h  ByteRTCStart.rc  ByteRTCStart.vcxproj  ByteRTCStart.vcxproj.filters  EngineWrapper.cpp  EngineWrapper.h  MeetingHanlder.cpp  README.md  Resource.h  Utils.cpp  Utils.h  main.cpp
Windows/veRTCScenesDemo/ByteRTCStart/BDUIKit/: BDBase.h  BDButton.h  BDComboxEx.h  BDCrack.h  BDCtrl.h  BDGDI.h  BDMisc.h  BDMsg.h  BDPngButton.h  BDPool.h  BDThunk.h  BDWinApp.cpp  BDWinApp.h  BDWnd.h
Windows/veRTCScenesDemo/ByteRTCStart/ByteRTCSDK_x64/: Configer.ini  RTCSDK.lib
Windows/veRTCScenesDemo/ByteRTCStart/ByteRTCSDK_x86/: RTCSDK.lib  commit.txt
Windows/veRTCScenesDemo/ByteRTCStart/bus/: byte_basic_event_queue.h  byte_basic_item_dispatcher.h  byte_basic_location_type.cc  byte_basic_location_type.h  byte_basic_message.h  byte_basic_message_bus.cc  byte_basic_message_bus.h  byte_basic_rwlock.h  byte_basic_string_util.h  byte_basic_task_queue.cc  byte_basic_task_queue.h  byte_basic_task_queue_pool.cc  byte_basic_task_queue_pool.h  byte_basic_weak_handler.h
Windows/veRTCScenesDemo/ByteRTCStart/meeting-manager/: IMeetingNotification.h  MeetingManager.cpp  MeetingManager.h  connection_manager.cc  connection_manager.h  wss_connector.cc  (+1 more)
(+4494 files in other folders)
